--- a/toDoList/Base.lproj/Main.storyboard
+++ b/toDoList/Base.lproj/Main.storyboard
@@ -12,13 +12,13 @@
         <!--To Do List-->
         <scene sceneID="7D7-uA-LIb">
             <objects>
-                <tableViewController id="K0R-I1-GjI" sceneMemberID="viewController">
+                <tableViewController id="K0R-I1-GjI" customClass="ToDoTableTableViewController" customModule="toDoList" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="OHJ-7Z-L7R">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="dkn-qY-W9S">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" id="dkn-qY-W9S">
                                 <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dkn-qY-W9S" id="G2M-gF-tL0">
@@ -33,7 +33,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="To Do List" id="M6M-zF-Z3b">
-                        <barButtonItem key="rightBarButtonItem" tag="1" title="+" id="gF4-ng-n7w"/>
+                        <barButtonItem key="rightBarButtonItem" tag="1" systemItem="add" id="gF4-ng-n7w"/>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G24-Qb-SNn" userLabel="First Responder" sceneMemberID="firstResponder"/>
